# dota2ai

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  api.py  compose.yaml  predict.py  pyproject.toml  requirements.txt  server.py  settings.yaml  tox.ini  train.py
.github/workflows/: test_release.yaml
api/: auth.py  binders.py  dependencies.py  errors.py  requests.py  settings.py
api/domain/: common.py
api/responses/: base.py  heroes.py
api/routers/: heroes.py
api/services/: heroes.py  name_mapping.py
api/services/heroes/: details.py
backend/: binders.py  dependencies.py  dev.py  requests.py
backend/db/: connect.py
backend/responses/: heroes.py
backend/routers/: heroes.py
backend/services/heroes/: details.py
cfg/: config.yaml
data/: classes.txt  dota2.yaml  labels.cache
data/heroes/: dota2.yaml  labels.cache
data/heroes/labels/: abyssal_underlord.txt  ancient_apparition.txt  arc_warden.txt  batrider.txt  beastmaster.txt  bounty_hunter.txt  broodmother.txt  chen.txt  clockwerk.txt  dark_willow.txt  death_prophet.txt  disruptor.txt  doom.txt  elder_titan.txt  ember_spirit.txt  enigma.txt  (+33 more)
data/labels/: abaddon.txt  alchemist.txt  brewmaster.txt  bristleback.txt  centaur.txt  chaos_knight.txt  clinkz.txt  dawnbreaker.txt  dazzle.txt  dragon_knight.txt  earth_spirit.txt  enchantress.txt  gyrocopter.txt  huskar.txt  keeper_of_the_light.txt  legion_commander.txt  leshrac.txt  marci.txt  medusa.txt  monkey_king.txt  muerta.txt  nature's_prophet.txt  night_stalker.txt  ogre_magi.txt  omniknight.txt  pangolier.txt  rubick.txt  silencer.txt  slark.txt  snapfire.txt  spectre.txt  templar_assassin.txt  terrorblade.txt  tinker.txt  treant.txt  troll_warlord.txt  tusk.txt  venomancer.txt  visage.txt  warlock.txt  (+2 more)
docs/: __init__.py  binders.py
docs/source/: api.domain.rst  api.responses.rst  api.routers.rst  api.rst  api.services.rst  backend.db.rst  backend.domain.rst  backend.responses.rst  backend.routers.rst  backend.rst  backend.services.rst  conf.py  docs.rst  dota2ai.collector.heroes.py.rst  dota2ai.collector.heroes.rst  dota2ai.collector.rst  dota2ai.rst  modules.rst
dota2ai/: settings.py
dota2ai/collector/: executor.py  send.py
tests/: conftest.py  test_executor.py  test_hello.py
tests/heroes/: test_details.py
tests/routers/: test_heroes.py
(+1 files in other folders)
