[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dota2ai"
version = "1.0.0"
requires-python = ">=3.11"
authors = [
  {name = "Masum Billal", email = "billalmasum93@gmail.com"},
]
maintainers = [
  {name = "Masum Billal", email = "billalmasum93@gmail.com"},
]
description = "AI tools for Dota 2."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python", "ocr", "opencv", "yolo", "Dota 2", "pytorch"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]


[project.urls]
Documentation = "https://dota2ai.readthedocs.io/en/latest/?badge=latest"
Repository = "https://github.com/proafxin/dota2ai"
"Bug Tracker" = "https://github.com/proafxin/dota2ai/issues"


[tool.mypy]
exclude = [".venv", ".env", "venv", "build", "docs", "dist"]


[tool.bandit]
exclude_dirs = [".venv", "venv", "env", ".tox", "docs", "tests"]


[tool.ruff]
line-length = 100
