[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dota2ai"
requires-python = ">=3.11"
authors = [
  {name = "Masum Billal", email = "billalmasum93@gmail.com"},
]
maintainers = [
  {name = "Masum Billal", email = "billalmasum93@gmail.com"},
]
description = "AI tools for Dota 2."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python", "ocr", "opencv", "yolo", "Dota 2", "pytorch"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[tool.hatch.version]
path = "dota2ai/about.py"

[project.urls]
Documentation = "https://dota2ai.readthedocs.io/en/latest/?badge=latest"
Repository = "https://github.com/proafxin/dota2ai"
"Bug Tracker" = "https://github.com/proafxin/dota2ai/issues"


[tool.mypy]
exclude = [".venv", ".env", "venv", "build", "docs", "dist"]

[[tool.mypy.overrides]]
module = "openapidocs.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ultralytics.*"
ignore_missing_imports = true


[tool.bandit]
exclude_dirs = [".venv", "venv", "env", ".tox", "docs", "tests"]


[tool.ruff]
line-length = 120


[tool.pytest.ini_options]
asyncio_mode = "auto"
